# the-bunker-game

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
app/domain/: __init__.py
app/domain/bunker/: __init__.py  builder.py  entity.py  exceptions.py  profile.py
app/domain/character/: __init__.py  entity.py  state.py
app/domain/game/: __init__.py  entity.py  exceptions.py  participant.py  state.py
app/domain/game/participant/: __init__.py  entity.py  state.py
app/domain/game_participant/: entity.py  state.py
app/domain/lobby/: __init__.py  entity.py  exceptions.py  state.py
app/domain/round/: __init__.py  entity.py  exceptions.py  round_result.py  state.py
app/domain/user/: entity.py
app/domain/voting/: __init__.py  entity.py  exceptions.py  state.py  voting_result.py
doc/: 00-vision.md  01-glossary.md  02-business-rules.md  03-state-model.md
doc/use_cases/gameplay/: UC-G1-generate-world.md  UC-G2-start-round.md  UC-G3-vote.md  UC-G4-finish-vote.md  UC-G5-eliminate-player.md  UC-G6-finish-game.md  UC-G7-leave-during-game.md
doc/use_cases/lobby/: UC-L1-create-game.md  UC-L2-join-game.md  UC-L3-leave-game.md  UC-L4-start-game.md
tests/: placeholder_test.py
tests/factories/: participant.py
tests/unit/: conftest.py  fakes.py
tests/unit/bunker/: test_bunker.py  test_bunker_profile.py  test_bunker_profile_builder.py
tests/unit/game/: test_game.py
tests/unit/lobby/: test_lobby.py
tests/unit/round/: test_round.py
tests/unit/voting/: test_voting.py
