[project]
name = "bunker"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.1.1",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
    "pre-commit",
]

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B"
]
